tests/ui/contract/fail/invalid-argument.stderr
error: encountered unknown or unsupported ink! configuration argument
 --> tests/ui/contract/fail/invalid-argument.rs:1:23
  |
1 | #[pendzl::contract(test_invalid_arg = true)]
  |                       ^^^^^^^^^^^^^^^^^^^^^^^
